testcases/error-cases/syntax-error-04/error.txt
error[E0002]: missing closing parenthesis
 --> testcases\error-cases\syntax-error-04\input.canon:1:7
  |
1 | config(arg1, arg2      {
  |       ^
2 |     name = "test"
3 |     version = "1.0.0"
  |
  = note: every opening parenthesis must have a matching closing parenthesis
  = help: check for missing ')' or extra '(' in your code

error[E0014]: unexpected end of file
 --> testcases\error-cases\syntax-error-04\input.canon:1:12
  |
1 | config(arg1, arg2      {
  |            ^
2 |     name = "test"
3 |     version = "1.0.0"
  |
  = note: expected end of file, '#schema', 'schema', 'struct', 'union', 'type', 'use', 'this', 'val', 'var', 'fun', annotation, or identifier
  = note: the file ended unexpectedly
  = help: check if you are missing closing braces, parentheses, or string terminators

error: aborting due to 2 previous errors